# signature_test_task

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
src/: arguments.cpp  arguments.h  common.cpp  common.h  file.cpp  file.h  fileiterator.cpp  fileiterator.h  main.cpp  signature.cpp  signature.h
tests/: common.cpp  common.h  test_common.cpp  test_file.cpp  test_fileiterator.cpp  test_signature.cpp
